samples/_failures_safe/1761316945_c8c046_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e0a0ea7.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_2e0a0ea7.c:149:16: error: missing terminating " character
  149 |         printf("[
      |                ^~
./samples/SAFE/__tmp_2e0a0ea7.c:149:9: error: expected expression at end of input
  149 |         printf("[
      |         ^~~~~~
./samples/SAFE/__tmp_2e0a0ea7.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e0a0ea7.c:149:9: error: expected declaration or statement at end of input
